# UnrealEnginePatch

./: CMakeLists.txt  README.md  UnrealEnginePatch.uplugin
Scripts/: BuildEnginePatchTools.bat  RemoveOrphanPatch.ps1  RemoveOrphanPatches.ps1  SyncPatches.bat  UnapplyPatches.bat
Source/UnrealEnginePatchEditor/: UnrealEnginePatchEditor.Build.cs
Source/UnrealEnginePatchEditor/Private/: EnginePatchBridge.cpp  EnginePatchBridge.h  EnginePatchFileLoader.cpp  EnginePatchFileLoader.h  EnginePatchManager.cpp  EnginePatchManager.h  SEnginePatchPanel.cpp  SEnginePatchPanel.h  UnrealEnginePatchEditorModule.cpp  UnrealEnginePatchSubsystem.cpp
Source/UnrealEnginePatchEditor/Public/: EnginePatchTypes.h  UnrealEnginePatchEditorModule.h  UnrealEnginePatchSubsystem.h
Tools/EnginePatchCLI/: CMakeLists.txt  main.cpp
